--- a/views/contact.pug
+++ b/views/contact.pug
@@ -14,7 +14,7 @@ head
     // <nav class="main-menu navbar navbar-expand-sm navbar-dark">
     .main-header
       .logo
-        img(src='images/logo-small.png' alt='Modern Pet')
+        img(src='images/logo-small-2.png' alt='Modern Pet')
       nav.main-menu.navbar.navbar-expand-sm.navbar-dark
         #navbarContent
           ul.navbar-nav
@@ -59,7 +59,7 @@ head
 // FOOTER
 footer
   .logoFooter
-    img(src='images/logo-small.png' alt='Modern Pet')
+    img(src='images/logo-small-2.png' alt='Modern Pet')
   .footerR
     .row
       .col
