--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,7 +6,7 @@ header {
   background-repeat: no-repeat;
   background-size: cover;
 }
-.main-header .logo img {
+.main-header  img {
   width: 220px;
   margin: 0.5em 2em;
   float: left;
