--- a/views/thankyou.pug
+++ b/views/thankyou.pug
@@ -24,19 +24,14 @@ head
               a.nav-link(href='#aboutDiv') About
             li.nav-item
               a.nav-link(href='contact') Contact Us
-            a.nav-item.btn.btn-light.buttonR(href='register') Register/Sign In
+            a.nav-item.btn.btn-info.buttonR(href='register') Register/Sign In
 #bottomHeader
   a(href='#')
     p CLICK HERE FOR 25% off!
 // REGISTER
-.main-wrapper
+.thankyou
   h3 Thank you for your registration!
-// ABOUT US
-#aboutDiv
-  #contact-b
-  h1 ABOUT US
-  p
-    | Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam egestas, odio ac sollicitudin efficitur, eros mauris malesuada ante, sit amet aliquet turpis ligula eu dui. Duis finibus leo quis lobortis cursus. Quisque fermentum urna at lacus pharetra convallis. Praesent erat ipsum, facilisis eget finibus nec, placerat in felis. Suspendisse tellus diam, congue et elementum ut, posuere congue augue. Maecenas ultrices eleifend commodo. Quisque quis turpis a dui suscipit viverra sed in velit. Vestibulum diam purus, pretium ut dui ultrices, gravida imperdiet tortor. Cras vel lorem lectus. In purus ipsum, viverra at convallis sit amet, pharetra at leo.
+  a.nav-link(href='login') Log In into your Account
 // FOOTER
 footer
   .logoFooter
@@ -93,4 +88,4 @@ script(src='https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js')
 // Popper
 script(src='https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js')
 // End of External Files/Links
-script(src='vue.js')
+
